<resources>
    <string name="app_name">Assignment1</string>
    <string name="tip_calculator">Tip Calculator</string>
    <string name="check_amount">Check Amount:</string>
    <string name="number_of_people">Number of People:</string>
    <string name="tip_percentage">Tip Percentage (%):</string>
    <string name="calculate">Calculate</string>
    <string name="total_bill">Total Bill:</string>
    <string name="total_per_person">Total Per Person:</string>
    <string name="total_tip">Total Tip:</string>
    <string name="tip_per_person">Tip Per Person:</string>
</resources>