<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Assignment1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:stretchColumns="1"
    android:background="@color/material_dynamic_neutral80" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:fontFamily="@font/amiko"
        android:gravity="center"
        android:text="@string/tip_calculator"
        android:textSize="30sp" />

    <TableRow
        android:id="@+id/rowCheck"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="15dip"
        android:background="@color/cardview_light_background"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textCheck"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:fontFamily="@font/amiko"
            android:text="@string/check_amount" />

        <EditText
            android:id="@+id/editCheck"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/amiko"
            android:inputType="numberDecimal">

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/rowPeople"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:layout_marginBottom="15dip"
        android:background="@color/cardview_light_background"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textPeople"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:fontFamily="@font/amiko"
            android:text="@string/number_of_people"/>

        <EditText
            android:id="@+id/editPeople"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/amiko"
            android:inputType="number" />
    </TableRow>

    <TableRow
        android:id="@+id/rowTip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@color/cardview_light_background"
        android:layout_marginBottom="24dip">

        <TextView
            android:id="@+id/textTip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:fontFamily="@font/amiko"
            android:text="@string/tip_percentage"/>

        <EditText
            android:id="@+id/editTip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/amiko"
            android:inputType="number" />
    </TableRow>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#D12222"
        android:fontFamily="@font/amiko"
        android:gravity="center"
        android:text="@string/calculate"
        android:textSize="20sp"/>

    <TableRow
        android:id="@+id/rowBillTotalPer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="24dip"
        android:background="@color/cardview_light_background"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textTotalBill"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:fontFamily="@font/amiko"
            android:text="@string/total_bill"/>

        <TextView
            android:id="@+id/textCost"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/amiko"/>

        <TextView
            android:id="@+id/textPerPerson"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/amiko"
            android:text="@string/total_per_person"/>

        <TextView
            android:id="@+id/textCostPer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/amiko"
            android:text=""/>
    </TableRow>

    <TableRow
        android:id="@+id/rowTipTotalPer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="24dip"
        android:background="@color/cardview_light_background"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textTotalTip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/amiko"
            android:text="@string/total_tip"/>

        <TextView
            android:id="@+id/textTipCost"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/amiko"
            android:text=""/>

        <TextView
            android:id="@+id/textTipPerPerson"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/amiko"
            android:text="@string/tip_per_person"/>

        <TextView
            android:id="@+id/textTipPer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/amiko"
            android:text=""/>
    </TableRow>

</TableLayout>